<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_subscriptions"
        android:icon="@android:drawable/btn_star"
        android:title="@string/menu_subscriptions"
        app:showAsAction="always|withText" />

    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always|withText"
        android:icon="@android:drawable/ic_menu_search" />

    <item
        android:id="@+id/menu_events"
        android:icon="@android:drawable/ic_menu_day"
        android:title="@string/menu_events"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:showAsAction="always|withText" />
</menu>