<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/background"
    tools:context="isel.ps.ps_userclient.presentations.LoginActivity">

    <TextView
        android:id="@+id/lbl_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_app_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_above="@+id/text_login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:layout_alignLeft="@+id/text_login_password"
        android:layout_alignStart="@+id/text_login_password" />

    <TextView
        android:id="@+id/lbl_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_login_email"
        android:layout_alignBottom="@+id/text_login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/text_login_email"
        android:layout_toStartOf="@+id/text_login_email"
        android:text="@string/label_login"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/text_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_login_error"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register" />

    <TextView
        android:id="@+id/lbl_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:layout_toStartOf="@+id/text_login_password"
        android:text="@string/label_password"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_above="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/lbl_login_or"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp" />

    <TextView
        android:id="@+id/lbl_login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_above="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>