<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_post_msg_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_post_title"
        android:layout_marginTop="11dp"
        android:text="@string/lbl_rank_msg_size"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/dialog_post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_post_msg_size"
        android:ems="10"
        android:hint="@string/hint_rank_post_text"
        android:inputType="textShortMessage"
        android:maxLength="150" />

    <RatingBar
        android:id="@+id/dialog_rank_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_post_text"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:stepSize="1" />

    <Button
        android:id="@+id/dialog_post_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_rank_rating"
        android:layout_alignStart="@+id/dialog_rank_rating"
        android:layout_below="@+id/dialog_rank_rating"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/dialog_post_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dialog_rank_rating"
        android:layout_alignRight="@+id/dialog_rank_rating"
        android:layout_below="@+id/dialog_rank_rating"
        android:text="@string/btn_submit"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>