<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_change_username"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title_change_password"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/text_change_password"
        android:layout_toStartOf="@+id/text_change_password"
        android:text="@string/lbl_change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/text_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignBaseline="@+id/lbl_change_password"
        android:layout_alignBottom="@+id/lbl_change_password"
        android:layout_alignParentRight="true"
        android:maxLength="20"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/lbl_confirm_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_change_password"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/text_confirm_change_password"
        android:layout_toStartOf="@+id/text_confirm_change_password"
        android:maxLength="20"
        android:text="@string/lbl_confirm_change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/text_confirm_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_change_password"
        android:layout_alignStart="@+id/text_change_password"
        android:layout_below="@+id/text_change_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_change_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_change_pass_error"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_change_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_change_pass_error"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/btn_submit"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/text_change_pass_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_confirm_change_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:textAlignment="center"
        android:textSize="18sp" />
</RelativeLayout>