<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/background"
    tools:context="isel.ps.ps_userclient.presentations.ServiceActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"/>

    <TextView
        android:id="@+id/title_service_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_service_info"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/button_border"
        android:text="@string/btn_service_info"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/btn_subscribe_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_service_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/btn_service_events"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/service_view_flipper"
        android:layout_toRightOf="@+id/btn_service_info"
        android:layout_toEndOf="@+id/btn_service_info" />

    <Button
        android:id="@+id/btn_service_notices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_service_events"
        android:layout_alignBottom="@+id/btn_service_events"
        android:layout_toEndOf="@+id/btn_service_events"
        android:layout_toRightOf="@+id/btn_service_events"
        android:background="@drawable/button_border"
        android:text="@string/btn_service_notices"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_service_rankings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_service_notices"
        android:layout_alignBottom="@+id/btn_service_notices"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btn_service_notices"
        android:background="@drawable/button_border"
        android:text="@string/btn_service_ranking"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <ViewFlipper
        android:id="@+id/service_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_service_info">

        <include android:id="@+id/serv_info" layout="@layout/service_info_block" />
        <include android:id="@+id/serv_view" layout="@layout/service_listview" />

        </ViewFlipper>

    <Button
        android:id="@+id/btn_subscribe_service"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_subscribe"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/text_service_description"
        android:layout_toRightOf="@+id/btn_service_post_rank"
        android:layout_toEndOf="@+id/btn_service_post_rank" />

    <Button
        android:id="@+id/btn_service_post_rank"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_post_comment"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/btn_service_info"
        android:layout_toLeftOf="@+id/btn_service_notices"
        android:layout_toStartOf="@+id/btn_service_notices" />

    <TextView
        android:id="@+id/text_service_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title_service_title"
        android:layout_marginTop="14dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</RelativeLayout>